[project]
name = "wpwn"
version = "1.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "capstone>=5.0.6",
    "keystone>=27.0.0",
    "lief>=0.17.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wpwn*"]
exclude = ["img*", "tests*"]